Fix mobile bug, set container-fluid in base and allow button text to wrap -- Fix - Customer requested modal buttons have page background, replaced a white background. -- Update /dist files

--- a/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_header.scss
+++ b/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_header.scss
@@ -2,6 +2,8 @@
   width: 100%;
 }
 
+
+
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
   background-color: transparent;
   color: white;
@@ -57,6 +59,12 @@
 
   &> .container {
     padding: 0;
+  }
+  .container {
+    &> .navbar-header {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 
   .navbar-brand {
